    packs are fatal. This should catch issues like LP: #807805
    - update debian/rules
  * Don't unconditionally set -fshort-wchar in the libxul.pc pkgconfig file.
    It's no longer needed with newer toolchains which support gnu++0x, and
    defining it breaks the mozvoikko build
    - update debian/pkgconfig/libxul.pc.in
    - update debian/rules

 -- Chris Coulson <chris.coulson@canonical.com>  Thu, 14 Jul 2011 16:04:43 +0100

firefox-trunk (7.0~a1~hg20110704r72289+nobinonly-0ubuntu1) oneiric; urgency=low

  * New upstream snapshot v7.0 A1 HG 20110704R72289

  * Update globalmenu-extension to 1.7
    - Fixes LP: #779905 - menubar sometimes appears inside the window rather
      than the panel, due to a startup race
  * Refresh patches
    - update debian/firefox-kde.patch
    - update debian/patches/mozilla-kde.patch
    - update debian/patches/reload-new-plugins.patch
  * Drop patches fixed upstream
    - remove debian/patches/fix-sdk-bin-install.patch
    - remove debian/patches/cairo-lcd-filter.patch
    - update debian/patches/series
  * Look in the correct location for the staged langpack xpi's. They moved
    from dist/install to dist/linux-$(DEB_HOST_GNU_CPU)
    - update debian/rules
  * Ensure we use DEB_BUILD_* and DEB_HOST_* consistently so that cross-
    compiling works
    - update debian/rules
    - update debian/mozconfig.in
    - update debian/firefox-dev.install.in
  * Improve the description for unavailable language packs
    - update debian/control.langpacks.unavail
  * Simplify firefox-dev.install a bit by installing everything in
    /usr/include
    - update debian/firefox-dev.install.in
  * Use $(MOZ_DISTDIR) rather than $(MOZ_OBJDIR)/dist in debian/rules.
    - update debian/rules
  * Handle video/webm mimetypes
    - update debian/firefox.desktop.in
  * Add a strict-ish firefox dependency on the language packs, to avoid issues
    where users install the addon compatility reporter and run incompatible
    language packs