@@ -27,7 +27,7 @@ Forwarded: no
 +%       override chrome://browser/content/browser.xul chrome://browser/content/browser-kde.xul desktop=kde
  *       content/browser/browser-tabPreviews.xml       (content/browser-tabPreviews.xml)
  *       content/browser/fullscreen-video.xhtml        (content/fullscreen-video.xhtml)
-         content/browser/highlighter.xhtml             (content/highlighter.xhtml)
+ *       content/browser/inspector.html                (content/inspector.html)
 --- a/browser/components/build/nsModule.cpp
 +++ b/browser/components/build/nsModule.cpp
 @@ -46,7 +46,7 @@
