@@ -76,7 +76,7 @@ Forwarded: not-needed
 -  <Param name="rls" value="{moz:distributionID}:{moz:locale}:{moz:official}"/>
 -  <MozParam name="client" condition="defaultEngine" trueValue="firefox-a" falseValue="firefox"/>
  </Url>
- <SearchForm>http://www.google.com/firefox?hl=en</SearchForm>
+ <SearchForm>http://www.google.com/webhp?hl=en</SearchForm>
  </SearchPlugin>
 --- /dev/null
 +++ b/l10n/en-GB/browser/searchplugins/google-en-GB.xml
